--- a/mvc5_first/Views/Poke/Pokemon.cshtml
+++ b/mvc5_first/Views/Poke/Pokemon.cshtml
@@ -13,34 +13,39 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-md-5 col-md-offset-1">
-            <img src="/Content/resource/prop18.png" alt="HelloPokemon" title="HelloPokemon" />
+        <div class="col-md-5 col-md-offset-1 col-sm-12">
             <div>
+                <span class="mark">a,b:普,火,水,电,草,冰,斗,毒,地,飞,超,虫,岩,鬼,龙,钢,恶,仙</span>
+                <span class="mark">c:1,2,3,4,5,6</span>
+                <span class="mark">在地址栏中输入查询，例如：</span>
+                <span class="mark mark-important">www.mustgrip.com/Utility/Poke?a=水&b=地&c=3</span>
                 <span class="mark">参数a，b表示精灵的两个特性，如果是单属性精灵可以只需要输入a，默认计算地属性</span>
-                <span class="mark">参数c表示计算几种攻击属性组合，默认为4，复制黏贴到地址栏：</span>
-                <span class="mark-important">?a=水&b=地&c=4</span>
-                <span class="mark">计算规则：对每个的防御属性，在c种攻击属性中取大于1的最大伤害倍率，分别计算完18个倍率后相加，按照结果的最大值获取前30的攻击属性组合</span>
+                <span class="mark">参数c表示计算几种攻击属性组合，默认为3</span>
+                <br/>
+                <span class="mark">计算规则：对每个的防御属性，在c种攻击属性中取不小于2的最大伤害倍率，分别计算完18个倍率后相加，按照结果的最大值获取前40的攻击属性组合</span>
                 <span class="mark">本属性加成倍率1.5，攻击属性相克倍率为2，防御属性相克为0.5，免疫为0</span>
-                <span class="mark">几乎没测过，感觉没啥bug</span>
             </div>
+            <img src="/Content/resource/xiangke.png" alt="HelloPokemon" title="HelloPokemon" class="img-responsive center-block" />
 
         </div>
-        <div class="col-md-5 content">
+        <div class="col-md-5 content col-sm-12">
             @using mvc5_first.Models
             @model PokeEntity
             <table>
                 @if (Model != null && Model.SortedList != null)
                 {
-                    foreach (PokeAttrType[] item in Model.SortedList)
+                    foreach (var item in Model.SortedList)
                     {
                         <tr>
-                            @foreach (PokeAttrType i in item)
+                            @foreach (PokeAttrType i in item.SortList)
                             {
                                 <td>
                                     @i.ToString()
                                 </td>
                             }
-
+                            <td>
+                                @item.Score
+                            </td>
                         </tr>
                     }
                 }
