修复计算bug，优化

--- a/mvc5_first/Content/app.css
+++ b/mvc5_first/Content/app.css
@@ -1,7 +1,9 @@
-﻿.content{ border: 1px solid #2e8b57;padding: 5px;margin: 2px;}
+﻿.mainbody{ padding: 0.5em 2em}
+
+.content{ border: 1px solid #2e8b57;padding: 5px;margin: 2px;}
 
 .mark{ display: block;}
 .mark-important{ color: red;}
 
-table td {padding: 0 20px}
+table td {padding: 0 0 0 1em}
 
