mvc改造等，大部分结构已完成,dll等未提交

--- a/mvc5_first/Views/Shared/Error.cshtml
+++ b/mvc5_first/Views/Shared/Error.cshtml
@@ -1,18 +1,18 @@
-﻿@{
-    Layout = null;
+﻿@using mvc5_first.ViewModels
+@model ErrorViewModel
+@{
+    Layout = "MyLayout.cshtml";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width" />
-    <title>错误</title>
-</head>
-<body>
-    <hgroup>
-        <h1>错误。</h1>
-        <h2>处理你的请求时出错。</h2>
-    </hgroup>
-</body>
-</html>
+
+@section TitleSection{
+    错误页面
+}
+
+@section ContentBody
+{
+    <h1>错误信息：</h1>
+    <p>@Model.Error</p>
+    <h1>堆栈信息：</h1>
+    <p>@Model.Stack</p>
+}
