--- a/mvc5_first/Views/Poke/Pokemon.cshtml
+++ b/mvc5_first/Views/Poke/Pokemon.cshtml
@@ -35,9 +35,9 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th class="col-xs-3">技能组合</th>
+                            <th class="col-xs-3 col-md-2">技能组合</th>
                             <th class="col-xs-1">得分</th>
-                            <th class="col-xs-2">无力属性[0,1]</th>
+                            <th class="col-xs-2 col-md-3">无力属性[0,1]</th>
                             <th class="col-xs-3">一般属性[1.5,1.5]</th>
                             <th class="col-xs-3">优势属性[2,3]</th>
                         </tr>
