目录结构调整

--- a/mvc5_first/Views/BulkUpload/Index.cshtml
+++ b/mvc5_first/Views/BulkUpload/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model mvc5_first.ViewModels.FileUploadViewModel
+﻿@using ViewModel
+@model FileUploadViewModel
 
 @{
     Layout = "~/Views/Shared/MyLayout.cshtml";
