--- a/mvc5_first/Views/Poke/MyView.cshtml
+++ b/mvc5_first/Views/Poke/MyView.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Web.Mvc.Html
-@using mvc5_first.ViewModels
-@model PokemonListViewModel
+@using ViewModel
+@model ViewModel.PokemonListViewModel
 @{
     Layout = "~/Views/Shared/MyLayout.cshtml";
 }
