--- a/mvc5_first/Views/Poke/NewPoke.cshtml
+++ b/mvc5_first/Views/Poke/NewPoke.cshtml
@@ -1,5 +1,4 @@
-﻿@using mvc5_first.ViewModels
-@model BaseViewModel
+﻿@model ViewModel.BaseViewModel
 @{
     Layout = "~/Views/Shared/MyLayout.cshtml";
 }
