--- a/mvc5_first/Views/Shared/Footer.cshtml
+++ b/mvc5_first/Views/Shared/Footer.cshtml
@@ -1,5 +1,4 @@
-﻿@using mvc5_first.ViewModels
-@model FooterViewModel
+﻿@model ViewModel.FooterViewModel
 
 <div style='text-align:right;background-color:silver;color:darkcyan;border:1px solid gray;margin-top:2px;padding-right:10px;'>
     @Model.CompanyName © @Model.Year
