--- a/mvc5_first/Views/Shared/MyLayout.cshtml
+++ b/mvc5_first/Views/Shared/MyLayout.cshtml
@@ -1,6 +1,5 @@
 ﻿@using System.Web.Mvc.Html
-@using mvc5_first.ViewModels
-@model  BaseViewModel
+@model  ViewModel.BaseViewModel
 <!DOCTYPE html>
 
 <html>
