--- a/mvc5_first/Views/Poke/Pokemon.cshtml
+++ b/mvc5_first/Views/Poke/Pokemon.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using BusinessEntities
+@model PokeEntity
+@{
     Layout = null;
 }
 
@@ -30,8 +32,6 @@
         </div>
         <div class="col-md-7 poke-table col-sm-12">
             <div class="row">
-                @using mvc5_first.Models
-                @model PokeEntity
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
